--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>PWA Sudoku</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#009578" >
+	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" href='sudoku.svg'>
 	<link rel="icon" href="sudoku.svg" sizes="any" type="image/svg+xml">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="global.css">
