--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="manifest" href="manifest.json">
 	<link rel="apple-touch-icon" href='sudoku.svg'>
 	<link rel="icon" href="sudoku.svg" sizes="any" type="image/svg+xml">
+	<meta name="viewport" content= "width=device-width, user-scalable=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="global.css">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
